This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: bytes.fromhex('') raises SystemError
Type: crash Stage:
Components: Interpreter Core Versions: Python 3.0
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: christian.heimes, pitrou
Priority: normal Keywords: patch

Created on 2008-01-30 10:59 by pitrou, last changed 2022-04-11 14:56 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
fromhex.patch pitrou, 2008-01-30 11:13
Messages (3)
msg61855 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2008-01-30 10:59
>>> bytearray.fromhex('')
bytearray(b'')
>>> bytes.fromhex('')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
SystemError: Objects/stringobject.c:3131: bad argument to internal function
msg61858 - (view) Author: Antoine Pitrou (pitrou) * (Python committer) Date: 2008-01-30 11:13
Here is a patch. Unittest should be covered by removing the test_bytes
workaround mentioned in #1972 :)
msg61860 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2008-01-30 11:28
Thanks! :)

Fixed in r60439
History
Date User Action Args
2022-04-11 14:56:30adminsetgithub: 46265
2008-01-30 11:28:52christian.heimessetstatus: open -> closed
nosy: + christian.heimes
messages: + msg61860
priority: normal
type: crash
keywords: + patch
resolution: fixed
2008-01-30 11:13:33pitrousetfiles: + fromhex.patch
messages: + msg61858
2008-01-30 10:59:37pitroucreate