Fixed issue #1973: bytes.fromhex('') raises SystemError